--- a/src/gospelcenter/CelebrationBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-gospelcenterAdmin_celebrations_home:
-    pattern:  /
-    defaults: { _controller: gospelcenterCelebrationBundle:Default:index }
+gospelcenterCelebrations_list:
+    path:       /
+    defaults:   { _controller: gospelcenterCelebrationBundle:Celebration:list }
