new bundle require: locale

--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,10 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "v2.2.0",
         "suncat/mobile-detect-bundle": "0.9.*",
-        "symfony/icu": "v1.0.0",
-        "symfony/intl": "v2.3.10",
-        "coresphere/console-bundle": "dev-master"
+        "symfony/icu": "1.1.*",
+        "symfony/intl": "2.3.*",
+        "coresphere/console-bundle": "dev-master",
+        "symfony/locale": "v2.4.2"
     },
     "scripts": {
         "post-install-cmd": [
