--- a/src/gospelcenter/CenterBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/CenterBundle/Resources/config/routing.yml
@@ -40,6 +40,10 @@ gospelcenterPageGlobal:
     prefix:   /
     host: "gospelcenter.local"
 
+gospelcenterTV:
+    resource: "@gospelcenterMediaBundle/Resources/config/routing.yml"
+    prefix:   /
+    host: "tv.gospelcenter.local"
 
 ###########################   
 ########### DEV ###########
@@ -48,6 +52,10 @@ gospelcenterPageGlobal:
 gospelcenterAdminGlobal_dev:
     resource: "@gospelcenterAdminBundle/Resources/config/routingGlobal.yml"
     prefix:   /admin
+
+gospelcenterTV_dev:
+    resource: "@gospelcenterMediaBundle/Resources/config/routing.yml"
+    prefix:   /tv
 
 gospelcenterAdmin_dev:
     resource: "@gospelcenterAdminBundle/Resources/config/routing.yml"
