--- a/src/gospelcenter/MediaBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/MediaBundle/Resources/config/routing.yml
@@ -1,3 +1,15 @@
-gospelcenter_media_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: gospelcenterMediaBundle:Default:index }
+gospelcenterMedia:
+    path:       /
+    defaults:   { _controller: gospelcenterMediaBundle:Media:home }
+    
+gospelcenterMedia_speakers:
+    path:       /speakers
+    defaults:   { _controller: gospelcenterMediaBundle:Media:speakers }
+    
+gospelcenterMedia_speaker:
+    path:       /speaker/{speaker}
+    defaults:   { _controller: gospelcenterMediaBundle:Media:speaker }
+    
+gospelcenterMedia_video:
+    path:       /video/{video}
+    defaults:   { _controller: gospelcenterMediaBundle:Media:video }
