Admin: sort tables & bug fixed

--- a/src/gospelcenter/CenterBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/CenterBundle/Resources/config/routing.yml
@@ -1,4 +1,12 @@
 ###########################   
+########### API ###########
+###########################
+gospelcenterAPI:
+    resource: "@gospelcenterAPIBundle/Resources/config/routing.yml"
+    prefix:   /api
+
+
+###########################   
 ########## PROD ###########
 ###########################
 
