--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,3 +88,9 @@ mobile_detect:
             action: no_redirect 
         detect_tablet_as_mobile: false   # default false
     switch_device_view: ~
+    
+    
+fos_user:
+    db_driver:     orm                        
+    firewall_name: main                       
+    user_class:    gospelcenter\UserBundle\Entity\User 
