--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,38 +1,44 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        gospelcenter\UserBundle\Entity\User: sha512
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_LOCAL_ADMIN:   ROLE_LOCAL
+        ROLE_MEDIA:         ROLE_LOCAL_ADMIN
+        ROLE_CELEBRATION:   ROLE_LOCAL_ADMIN
+        ROLE_EVENT:         ROLE_LOCAL_ADMIN
+        ROLE_PASTOR:        [ROLE_MEDIA, ROLE_CELEBRATION, ROLE_EVENT]
+        ROLE_SUPER_GLOBAL:  ROLE_GLOBAL
+        ROLE_ADMIN:         [ROLE_LOCAL, ROLE_GLOBAL]
+        ROLE_SUPER_ADMIN:   [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
         in_memory:
             memory:
                 users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                    user:  { password: userpass, roles: [ 'ROLE_LOCAL' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        main:
+            #entity: {class: gospelcenter\UserBundle\Entity\User, property: username }
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        secured_area:
-            pattern:    ^/demo/secured/
+        main:
+            pattern: ^/
+            anonymous:  true
+            provider:   main
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path:   fos_user_security_logout
+                target: /
+            remember_me:
+                key:    %secret%
 
     access_control:
         - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
