--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,12 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "v2.2.0",
+        "jms/security-extra-bundle": "1.5.*",
         "suncat/mobile-detect-bundle": "0.9.*",
         "symfony/intl": "2.3.*",
         "coresphere/console-bundle": "dev-master",
-        "symfony/locale": "v2.4.2"
+        "symfony/locale": "v2.4.2",
+        "friendsofsymfony/user-bundle": "2.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
