--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -93,4 +93,8 @@ mobile_detect:
 fos_user:
     db_driver:     orm                        
     firewall_name: main                       
-    user_class:    gospelcenter\UserBundle\Entity\User 
+    user_class:    gospelcenter\UserBundle\Entity\User
+    group:
+        group_class: gospelcenter\UserBundle\Entity\Unit
+        form:
+            type: gospelcenter_userbundle_groupwithrolesformtype
