--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,5 +17,9 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
+fos_user_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /unit
+
 gospelcenter_center:
     resource: "@gospelcenterCenterBundle/Resources/config/routing.yml"
