--- a/src/gospelcenter/UserBundle/Resources/config/services.yml
+++ b/src/gospelcenter/UserBundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ parameters:
 #    gospelcenter_people.example.class: gospelcenter\PUserBundle\Example
 
 services:
-#    gospelcenter_user.example:
-#        class: %gospelcenter_user.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    gospelcenter.group.form.type:
+        class: gospelcenter\UserBundle\Form\Type\GroupWithRolesFormType
+        arguments: [%fos_user.model.user.class%]
+        tags:
+            - { name: form.type, alias: gospelcenter_userbundle_groupwithrolesformtype }
