--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -21,5 +21,8 @@ fos_user_group:
     resource: "@FOSUserBundle/Resources/config/routing/group.xml"
     prefix: /unit
 
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
+
 gospelcenter_center:
     resource: "@gospelcenterCenterBundle/Resources/config/routing.yml"
