--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "coresphere/console-bundle": "dev-master",
         "symfony/locale": "v2.4.2",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "jms/i18n-routing-bundle": "dev-master"
+        "jms/i18n-routing-bundle": "dev-master",
+        "imagine/imagine": "0.6.1",
+        "liip/imagine-bundle": "1.0.6"
     },
     "scripts": {
         "post-install-cmd": [
