--- a/src/gospelcenter/MediaBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/MediaBundle/Resources/config/routing.yml
@@ -1,71 +1,71 @@
-#gospelcenterMedia:
-#    path:       /
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:home }
-#
-#gospelcenterMedia_speakers:
-#    path:       /speakers
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:speakers }
-#
-#gospelcenterMedia_speaker:
-#    path:       /speaker/{speaker}
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:speaker }
-#
-#gospelcenterMedia_videos:
-#    path:       /videos
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:videos }
-#
-#gospelcenterMedia_video:
-#    path:       /video/{video}
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:video }
-#
-#gospelcenterMedia_audios:
-#    path:       /audios
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:audios }
-#
-#gospelcenterMedia_audio:
-#    path:       /audio/{audio}
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:audio }
-#
-#gospelcenterMedia_centers:
-#    path:       /centers
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:centers }
-#
-#gospelcenterMedia_center:
-#    path:       /center/{center}
-#    defaults:   { _controller: gospelcenterMediaBundle:Media:center }
-
 gospelcenterMedia:
     path:       /
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:home }
 
 gospelcenterMedia_speakers:
     path:       /speakers
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:speakers }
 
 gospelcenterMedia_speaker:
     path:       /speaker/{speaker}
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:speaker }
 
 gospelcenterMedia_videos:
     path:       /videos
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:videos }
 
 gospelcenterMedia_video:
     path:       /video/{video}
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:video }
 
 gospelcenterMedia_audios:
     path:       /audios
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:audios }
 
 gospelcenterMedia_audio:
     path:       /audio/{audio}
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:audio }
 
 gospelcenterMedia_centers:
     path:       /centers
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:centers }
 
 gospelcenterMedia_center:
     path:       /center/{center}
-    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+    defaults:   { _controller: gospelcenterMediaBundle:Media:center }
+
+#gospelcenterMedia:
+#    path:       /
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_speakers:
+#    path:       /speakers
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_speaker:
+#    path:       /speaker/{speaker}
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_videos:
+#    path:       /videos
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_video:
+#    path:       /video/{video}
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_audios:
+#    path:       /audios
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_audio:
+#    path:       /audio/{audio}
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_centers:
+#    path:       /centers
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
+#
+#gospelcenterMedia_center:
+#    path:       /center/{center}
+#    defaults:   { _controller: gospelcenterMediaBundle:Media:close }
