beta admin Global

--- a/src/gospelcenter/CenterBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/CenterBundle/Resources/config/routing.yml
@@ -13,10 +13,10 @@ gospelcenterImage:
 ########## PROD ###########
 ###########################
 
-#gospelcenterAdminGlobal:
-#    resource: "@gospelcenterAdminBundle/Resources/config/routingGlobal.yml"
-#    prefix:   /admin
-#    host: "beta.gospel-center.org"
+gospelcenterAdminGlobal:
+    resource: "@gospelcenterAdminBundle/Resources/config/routingGlobal.yml"
+    prefix:   /admin
+    host: "beta.gospel-center.org"
 
 gospelcenterAdmin:
     resource: "@gospelcenterAdminBundle/Resources/config/routing.yml"
