--- a/src/gospelcenter/CenterBundle/Resources/config/routing.yml
+++ b/src/gospelcenter/CenterBundle/Resources/config/routing.yml
@@ -67,44 +67,44 @@ gospelcenterTV:
 ########### DEV ###########
 ###########################
 
-gospelcenterAdminGlobal_dev:
-    resource: "@gospelcenterAdminBundle/Resources/config/routingGlobal.yml"
-    prefix:   /admin
-
-gospelcenterTV_dev:
-    resource: "@gospelcenterMediaBundle/Resources/config/routing.yml"
-    prefix:   /tv
-
-gospelcenterAdmin_dev:
-    resource: "@gospelcenterAdminBundle/Resources/config/routing.yml"
-    prefix:   /{center}/admin
-    requirements:
-        center: lausanne|annecy|montreux|jura
-
-gospelcenterEvents_dev:
-    resource: "@gospelcenterEventBundle/Resources/config/routing.yml"
-    prefix:   /{center}/events
-    requirements:
-        center: lausanne|annecy|montreux|jura
-
-gospelcenterAgenda_dev:
-    resource: "@gospelcenterEventBundle/Resources/config/routingAgenda.yml"
-    prefix:   /{center}/agenda
-    requirements:
-        center: lausanne|annecy|montreux|jura
-
-gospelcenterCelebrations_dev:
-    resource: "@gospelcenterCelebrationBundle/Resources/config/routing.yml"
-    prefix:   /{center}/celebrations
-    requirements:
-        center: lausanne|annecy|montreux|jura
-
-gospelcenterPage_dev:
-    resource: "@gospelcenterPageBundle/Resources/config/routing.yml"
-    prefix:   /{center}/
-    requirements:
-        center: lausanne|annecy|montreux|jura
-
-gospelcenterPageGlobal_dev:
-    resource: "@gospelcenterPageBundle/Resources/config/routingGlobal.yml"
-    prefix:   /
+#gospelcenterAdminGlobal_dev:
+#    resource: "@gospelcenterAdminBundle/Resources/config/routingGlobal.yml"
+#    prefix:   /admin
+#
+#gospelcenterTV_dev:
+#    resource: "@gospelcenterMediaBundle/Resources/config/routing.yml"
+#    prefix:   /tv
+#
+#gospelcenterAdmin_dev:
+#    resource: "@gospelcenterAdminBundle/Resources/config/routing.yml"
+#    prefix:   /{center}/admin
+#    requirements:
+#        center: lausanne|annecy|montreux|jura
+#
+#gospelcenterEvents_dev:
+#    resource: "@gospelcenterEventBundle/Resources/config/routing.yml"
+#    prefix:   /{center}/events
+#    requirements:
+#        center: lausanne|annecy|montreux|jura
+#
+#gospelcenterAgenda_dev:
+#    resource: "@gospelcenterEventBundle/Resources/config/routingAgenda.yml"
+#    prefix:   /{center}/agenda
+#    requirements:
+#        center: lausanne|annecy|montreux|jura
+#
+#gospelcenterCelebrations_dev:
+#    resource: "@gospelcenterCelebrationBundle/Resources/config/routing.yml"
+#    prefix:   /{center}/celebrations
+#    requirements:
+#        center: lausanne|annecy|montreux|jura
+#
+#gospelcenterPage_dev:
+#    resource: "@gospelcenterPageBundle/Resources/config/routing.yml"
+#    prefix:   /{center}/
+#    requirements:
+#        center: lausanne|annecy|montreux|jura
+#
+#gospelcenterPageGlobal_dev:
+#    resource: "@gospelcenterPageBundle/Resources/config/routingGlobal.yml"
+#    prefix:   /
